--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.94.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
